changed the title, body title and added picture

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Training</title>
+  <title> Kashif's Portfolio</title>
   <!-- meta -->
   <meta charset="utf-8" />
   <meta name="description" content="Personal Site">
@@ -19,7 +19,8 @@
 </head>
 <body>
   <div id="page-wrapper">
-    <h1>My Personal Page!</h1>
+    <h1>Kashif Ali's Page!</h1>
+    <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/12967976_10207866709458957_3786531241226408469_o.jpg?oh=847dd4a465402d3286a6ca81dad8c0f5&oe=59233B80">
   </div>
 </body>
 </html>
