--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="page-wrapper">
     <h1>Kashif Ali's Page!</h1>
-    <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/12967976_10207866709458957_3786531241226408469_o.jpg?oh=847dd4a465402d3286a6ca81dad8c0f5&oe=59233B80">
+    <img src="assets/imgs/dp.jpg">
   </div>
 </body>
 </html>
