Formated picture and added css, also added social media accounts.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     <h1>Kashif Ali's Page!</h1>
     <img src="assets/imgs/dp.jpg">
   </div>
+  <p>Kashif Ali is a journalist and coder. He can read and write in six languages including Englis, HTML, URDU, CSS, Punjabi and Java Script</p>
+<p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
+<p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
 </body>
 </html>
