add boot strap and jquery cdn,added buttons, page aligenment etc.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title> Kashif's Portfolio</title>
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- meta -->
   <meta charset="utf-8" />
   <meta name="description" content="Personal Site">
@@ -18,12 +23,26 @@
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
 </head>
 <body>
-  <div id="page-wrapper">
+  <div class="col-xs-12">
+    <div class="pull-right">
+      <button type="button" class="btn btn-primary pull right">Portfolio</button>
+      <button type="button" class="btn btn-primary">About</button>
+      <button type="button" class="btn btn-primary">Contact</button>
+    </div>
+  </div>
+
+<div id="page-wrapper">
     <h1>Kashif Ali's Page!</h1>
     <img src="assets/imgs/dp.jpg">
   </div>
-  <p>Kashif Ali is a journalist and coder. He can read and write in six languages including Englis, HTML, URDU, CSS, Punjabi and Java Script</p>
-<p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
-<p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
+  
+  <br>
+  <br>
+  <p>Kashif Ali is a journalist and coder. He can read and write in six languages including English, HTML, Urdu, CSS, Punjabi and Java Script</p>
+  <br>
+  <br>   
+  </div>
+  <p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
+  <p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
 </body>
 </html>
