--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Kashif's Portfolio</title>
-  <script
+	<title>Contact</title>
+	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
@@ -23,26 +23,27 @@
   <link rel="icon" type="image/png" href="assets/imgs/favicon.png">
 </head>
 <body>
-  <div class="col-xs-12">
+<div class="col-xs-12">
     <div class="pull-right">
-      <a href="index.html"><button type="button" class="btn btn-primary pull right">Home</button></a>
-      <button type="button" class="btn btn-primary pull right">Portfolio</button>
-      <button type="button" class="btn btn-primary">About</button>
-      <a href="contact.html"><button type="button" class="btn btn-primary">Contact</button> </a>
+		<a href="index.html"><button type="button" class="btn btn-primary pull right">Home</button></a>
+		<button type="button" class="btn btn-primary pull right">Portfolio</button>
+		<button type="button" class="btn btn-primary">About</button>
+		<a href="contact.html"><button type="button" class="btn btn-primary">Contact</button> </a>
     </div>
   </div>
 
-<div id="page-wrapper">
-    <h1>Kashif Ali's Page!</h1>
-    <img src="assets/imgs/dp.jpg">
+<form>
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
   </div>
-  
-  <br>
-  <br>
-  <p>Kashif Ali is a journalist and coder. He can read and write in six languages including English, HTML, Urdu, CSS, Punjabi and Java Script</p>
-  <br>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Message</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Type your message here.">
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+	<br>
   <br>   
-  </div>
   <p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
   <p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
   <p>View my work on <a href="https://github.com/kashifali554"> GitHub </a></p>
