added portfolio and about page

--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Kashif's Portfolio</title>
-  <script
+	<title>about</title>
+	<script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script>
@@ -33,19 +33,9 @@
   </div>
 
   <br>
-<div id="page-wrapper">
-    <h1>Kashif Ali's Page!</h1>
-      <img src="assets/imgs/dp.jpg">
-  </div>
-  
-  <br>
-    <br>
-    <p>Kashif Ali is a journalist and coder. He can read and write in six languages including English, HTML, Urdu, CSS, Punjabi and Java Script</p>
-  <br>
-    <br> 
-      <br>   
-    <p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
-    <p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
-    <p>View my work on <a href="https://github.com/kashifali554"> GitHub </a></p>
+  <br>   
+  <p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
+  <p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
+  <p>View my work on <a href="https://github.com/kashifali554"> GitHub </a></p>
 </body>
 </html>
