memory game added on portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,13 @@
       <a href="contact.html"><button type="button" class="btn btn-primary">Contact</button> </a>
     </div>
   </div>
-
+  <div class="screen-shot">
+  	<h1>Memory Game</h1>
+  	<img src="assets/imgs/game.png" class="screen-shot">
+  	<br>
+  	<br>
+  	<p>Visit <a href="https://github.com/kashifali554/wdi-fundamentals-memorygame/tree/master/starter-code">GitHub</a> Repo</p>
+  </div>
   <br>
   <br>   
   <p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
