Mr Fox lab solved and json screen shot added on portfolio pictre

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,13 @@
   	<br>
   	<br>
   	<p>Visit <a href="https://github.com/kashifali554/wdi-fundamentals-memorygame/tree/master/starter-code">GitHub</a> Repo</p>
+    <br>
+    <br>
+    <h1>Json and looping</h1>
+    <img src="assets/imgs/for-lop-json.png">
+    <br>
+    <br>
+    <p>Visit <a href="https://github.com/kashifali554">GitHub</a> Repo</p>
   </div>
   <br>
   <br>   
