--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,21 @@
       <a href="contact.html"><button type="button" class="btn btn-primary">Contact</button> </a>
     </div>
   </div>
+
+<!--   <div class="col-xs-12">
+    
+  </div>
+  <table>
+    <tr>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
+
+  <script type="text/javascript">
+    
+  </script> -->
   <div class="screen-shot">
   	<h1>Memory Game</h1>
   	<img src="assets/imgs/game.png" class="screen-shot">
@@ -47,6 +62,13 @@
   </div>
   <br>
   <br>   
+    <script type="text/javascript">
+      var screenShoot = $(".screen-shot")
+      for(var i = 0; i < screenShoot.length; i++){
+        var screen = screenShoot[i];
+        $("").append();
+      }
+  </script>
   <p>Follw me on <a href="twitter.com/chkashifali"> Twitter </a> </p>
   <p>Contact on <a href="https://www.linkedin.com/in/chkashifali"> linkedin </a></p>
   <p>View my work on <a href="https://github.com/kashifali554"> GitHub </a></p>
