--- a/index.html
+++ b/index.html
@@ -152,11 +152,14 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Weeme<br>Public Bathroom Finder</h2>
+                    <p class="lead">Four developers Ruby on Rails group project that allows users to input their location, and find nearby bathrooms.
+                        <br>I worked on location CRUD, Auth and front end.
+                        <br>
+                        <a target="_blank" href="https://github.com/kashifali554/weeme">Github Repo</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/coming.jpg" alt="">
                 </div>
             </div>
 
@@ -165,6 +168,30 @@
 
     </div>
     <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">WingIt</h2>
+                    <p class="lead">Five developers group project. Built in NodeJS and React front end.
+                        I worked on server side routing and controllers also on front end components.
+                        <br><a target="_blank" href="https://github.com/kashifali554/wingIt">Github repo</a></p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="img/coming.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
 
 	<a  name="contact"></a>
     <div class="banner">
