--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <br><a target="_blank" href="https://github.com/kashifali554/wingIt">Github repo</a></p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/coming.jpg" alt="">
+                    <img class="img-responsive" src="img/wingIt.png" alt="">
                 </div>
             </div>
 
