Chutney web added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Chutney Restaurant Website Revamp</h2>
-                    <p class="lead">Chutney is a popular Indian/Pakistani restaurant in San Francisco. I am revamping their website as single page app using bootstrap.</p>
+                    <p class="lead">Chutney is a the best place of Indian/Pakistani cusine in San Francisco. I revamped their website as single page app using bootstrap. <a target="_blank" href="http://www.chutneysf.com">Live Website</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/chutney.png" alt="Chutney website">
