--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Chutney Restaurant Website Revamp</h2>
-                    <p class="lead">Chutney is a the best place of Indian/Pakistani cusine in San Francisco. I revamped their website as single page app using bootstrap. <a target="_blank" href="http://www.chutneysf.com">Live Website</a></p>
+                    <p class="lead">Chutney is the favorite one stop restaurant to fulfil your Pakistani/Indian food cravings. I converted their website into a single page app using bootstrap,Javascript.
+                        <a target="_blank" href="http://www.chutneysf.com">Live Website</a> and
+                        <a target="_blank" href="http://chutneysf.com/OldSite(2013)/index.html">Old Web link</a>
+                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/chutney.png" alt="Chutney website">
